File data move (append case) was added